edits for jquery

--- a/413_Assignment2/Views/Shared/_Layout.cshtml
+++ b/413_Assignment2/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
 
     <footer>Copyright Tyler Barty 2021</footer>
 
-
     <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/JavaScript.js"></script>
 
 </body>
 </html>
