--- a/413_Assignment2/Views/Home/GradeCalc.cshtml
+++ b/413_Assignment2/Views/Home/GradeCalc.cshtml
@@ -6,31 +6,32 @@
     ViewBag.Header = "Welcome to Tyler Bartholomew's Website";
 }
 
+<!--Calculator Form-->
+<div class="box">
+    <h2>Grade Calculator</h2>
+    <form>
+        <label>Assignments:</label>
+        <input type="number" id="assignments" max="100" min="0" />
+        <br />
+        <label>Group Projects:</label>
+        <input type="number" id="projects" max="100" min="0" />
+        <br />
+        <label>Quizzes:</label>
+        <input type="number" id="quizzes" max="100" min="0" />
+        <br />
+        <label>Exams:</label>
+        <input type="number" id="exams" max="100" min="0" />
+        <br />
+        <label>Intex:</label>
+        <input type="number" id="intex" max="100" min="0" />
+        <br />
+        <br />
+        <input type="submit" value="Calculate Grades" id="submit" onclick="calcGrades()" />
+    </form>
+</div>
 
-    <div class="box">
-        <h2>Grade Calculator</h2>
-        <form>
-            <label>Assignments:</label>
-            <input type="number" id="assignments" max="100" min="0" />
-            <br />
-            <label>Group Projects:</label>
-            <input type="number" id="projects" max="100" min="0"/>
-            <br />
-            <label>Quizzes:</label>
-            <input type="number" id="quizzes" max="100" min="0" />
-            <br />
-            <label>Exams:</label>
-            <input type="number" id="exams" max="100" min="0"/>
-            <br />
-            <label>Intex:</label>
-            <input type="number" id="intex" max="100" min="0" />
-            <br />
-            <br />
-            <input type="submit" value="Calculate Grades" id="submit" onclick="calcGrades()" />
-        </form>
-    </div>
+<!--Include Scripts-->
 
-    <script src="/node_modules/jqquery/dist/jquery.min/js"></script>
-    <script src="~/js/JavaScript.js"></script>
+
 
 
